Update and rename HC3_1998_Q1.txt to HC3_1998_Q1.Rmd

--- a/03-RSS-HC3/HC3_1998_Q1.Rmd
+++ b/03-RSS-HC3/HC3_1998_Q1.Rmd
@@ -1,8 +1,18 @@
-
-
 ---
-% PAPER III : Statistical Applications & Practice
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
+```{r}
+
+#library(xaringan)
+```
 
  
  
