--- a/03-RSS-HC3/HC3_2002_Q3.Rmd
+++ b/03-RSS-HC3/HC3_2002_Q3.Rmd
@@ -1,5 +1,18 @@
-
 ---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r}
+
+#library(xaringan)
+```
 
 Higher Certificate, Paper III, 2002. Question 3
 
