Update and rename HC3_2004_Q5.txt.txt to HC3_2004_Q5.Rmd

--- a/03-RSS-HC3/HC3_2004_Q5.Rmd
+++ b/03-RSS-HC3/HC3_2004_Q5.Rmd
@@ -1,4 +1,19 @@
 ---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r}
+
+#library(xaringan)
+```
+
 Higher Certificate, Paper III, 2004.  Question 5 
  
 
