Update and rename HC3_2006_Q2.txt.txt to HC3_2006_Q2.Rmd

--- a/03-RSS-HC3/HC3_2006_Q2.Rmd
+++ b/03-RSS-HC3/HC3_2006_Q2.Rmd
@@ -1,6 +1,18 @@
-
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
 ---
 
+```{r}
+
+#library(xaringan)
+```
 
 .
 The tensile strength of a synthetic fibre used to make cloth for men's shirts is of
