--- a/03-RSS-HC3/HC3_2002_Q1.Rmd
+++ b/03-RSS-HC3/HC3_2002_Q1.Rmd
@@ -1,3 +1,18 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r}
+
+#library(xaringan)
+```
 
 
 1. The following data are from Altman (1991), Practical Statistics for Medical Research, and represent measurements of 
