--- a/03-RSS-HC3/HC3_1999_Q6.Rmd
+++ b/03-RSS-HC3/HC3_1999_Q6.Rmd
@@ -18,13 +18,17 @@ Diastolic  b.p. difference
 Sum of squares 
 4775502 380062 6518 190817 161548 2327 
  
+---
+
 Perform an appropriate test to determine whether the investigation provides evidence that the drug is effective in reducing the mean systolic blood pressure.  Determine a 95% confidence interval for the mean change in systolic blood pressure. (10) 
  
 Investigate whether the drug is equally effective in reducing diastolic blood pressure. (5) 
  
 Make a scatter plot which shows the relation between the change in diastolic blood pressure and the change in systolic blood pressure.  What can be deduced from the scatter plot about the size of the change in diastolic blood pressure compared to the size of the change in systolic blood pressure?  (No detailed calculations are required.) (5) 
 
---- A two-sample t-test would not be appropriate because of the correclation.Paired comparisons
+--- 
+
+A two-sample t-test would not be appropriate because of the correclation.Paired comparisons
 can be examined for systolic and for diastolic by examining the two sets of differences,
 that are given. Tn each case a one-trail test sets of difference,against a N.H. that the
 true difference= 284
@@ -58,6 +62,8 @@ s2 =
 p
 74:21=15
 = 9:27=2:22 = 4:17
+
+---
     * The 95\% confidence interval is 9:27 § 2:145 £ 2:22 = 9:27 § 4:76 which is 4.51 to 14.03
     * Again there is very strong evidence of a real difference, ie that the drug is effective, but the
 reduction in diastolic pressure is less than in systolic.
