--- a/03-RSS-HC3/HC3_1997_Q7.Rmd
+++ b/03-RSS-HC3/HC3_1997_Q7.Rmd
@@ -15,8 +15,13 @@ output:
 ```
 
  
- 
-4. Silicon chip manufacture involves a complex process in which layers are deposited on a wafer of silicon by vapour deposition at high temperatures. An electronics engineering team investigated the effect of deposition time and deposition temperature on the thickness of a particular layer. They particularly wanted to find out whether either factor alone could be used to control the thickness of the layer. They used two settings of deposition time  (Low and High relative to currently used time) and two temperatures (1210°C and 1240°C). Measurements of the thickness of the layer were made on each of five silicon wafers produced under each set of conditions. The measurements are given in the table below.
+Silicon chip manufacture involves a complex process in which layers are deposited on a wafer of silicon by vapour deposition at high temperatures. An electronics engineering team investigated the effect of deposition time and deposition temperature on the thickness of a particular layer. 
+
+They particularly wanted to find out whether either factor alone could be used to control the thickness of the layer. They used two settings of deposition time  (Low and High relative to currently used time) and two temperatures (1210°C and 1240°C). Measurements of the thickness of the layer were made on each of five silicon wafers produced under each set of conditions. 
+
+---
+
+The measurements are given in the table below.
 Thickness of layer (Ëm)
 Deposition Time High Low
 Deposition
@@ -25,6 +30,9 @@ Deposition
 Temperature
 1240 14.49,  14.33,  13.94, 14.31,  14.18.
 14.27,  14.37,  14.16, 14.03,  14.20.
+
+---
+
 The sum of the 20 measurements is 285.09 and the corresponding sum of squares is 4067.00.
 (i) Perform an analysis of variance, including tests for the effects of time and temperature and the interaction between time and temperature.
 
@@ -33,6 +41,7 @@ The sum of the 20 measurements is 285.09 and the corresponding sum of squares is
  
  
 (ii) Produce a diagram of means and their standard errors which makes clear the nature of any interaction that there may be between time and temperature.
+
 (iii) Write a short report (4 or 5 informative sentences) which explains the findings of your analysis in non-technical language for the team who carried out the investigation.
 
 ---
@@ -43,6 +52,8 @@ Time: H L
 1210 73:88 68:93 : 142:81
 1240 71:25 71:03 : 142:28
 145:13 139:96 285:09
+
+---
 
 *  Correction term G2=N = 285:092=20 = 4063:8154.
 S.S. for Times = 1
@@ -56,6 +67,7 @@ S.S. for all “treatments” = 1
 N = 2:46914.
 * Corrected total S.S. = 4067:00 \;-\;4063:8154 = 3:1846.
 
+---
 \begin{verbatim}
 Analysis of Variance.
 D:F: S:S: M:S:
@@ -80,6 +92,7 @@ p
 s2=5 = 0:095. * Hence at 12400 C,
 time has no effect, while at 12100 C time H gives a thicker layer.
 
+---
 
 *  Report should make the point that neither time nor temperature alone
 determines the thickness of the layer; also for a thicker layer we should
