--- a/03-RSS-HC3/HC3_1999_Q5.Rmd
+++ b/03-RSS-HC3/HC3_1999_Q5.Rmd
@@ -9,13 +9,7 @@ output:
       countIncrementalSlides: false
 ---
 
-```{r}
-
-#library(xaringan)
-```
-
-
-3. The infant mortality rate per 1000 live births and the percentage adult female literacy rate for a sample of countries are given in the table below. 
+The infant mortality rate per 1000 live births and the percentage adult female literacy rate for a sample of countries are given in the table below. 
  
  
 \begin{tabular}{|c|c|c|}
@@ -38,12 +32,12 @@ P	&	25	&	96
 R	&	22	&	93	
 \end{tabular}
 
+---
 
 
-
-    * Sum 1000 1231 
-    * Sum of squares 88268 103411 
-    * Sum of products 77068 
+* Sum 1000 1231 
+* Sum of squares 88268 103411 
+* Sum of products 77068 
 
 
  
@@ -52,10 +46,7 @@ R	&	22	&	93
 (ii) Use the additional information contained in the table to fit a linear relation which could be used to predict infant mortality rate from adult female literacy rate. (4) 
  
 
- 
-
-
-%%%%
+---
 
 * (i) (i)(iii)(v) See next sheet.
 * n = 15; ¯y = 1000=15 = 66:67; ¯x = 1231=15 = 82:07;
@@ -80,7 +71,7 @@ x2 = 103411 Therefore \hat{y} = 378:81 ¡ 3:714x.
 ˆa = 66:667 + 2:094 £ 82:007 = 238:51 Therefore $\hat{y} = 238:51 - 2:094x$. Line A:
 * $\hat{y} = 378:81 ¡ 3:714x$ Line B:
 
-\newpage
+---
 
 
  
@@ -98,15 +89,20 @@ x2 = 103411 Therefore \hat{y} = 378:81 ¡ 3:714x.
  
  
 (v) Plot the new fitted line on the scatter plot. 
-(2) 
+
  
-(vi) What do you conclude about the effect of country C?  What would be your recommendations about which equation should be used to predict infant mortality rate? (4) 
+(vi) What do you conclude about the effect of country C?  
+
+What would be your recommendations about which equation should be used to predict infant mortality rate? (4) 
 
 
 ---
+
 * Country C is out of step with the others, and is very influential in determining the fitted
 line. In fact neither line fits the lower literacy rate values at all well, although line B does
-rather better than A for the upper values.The variability in y as x decreases suggests
+rather better than A for the upper values.
+
+The variability in y as x decreases suggests
 that a linear regression assuming constant variance is not lively to do well; a weighted
 regression might be considered if suitable data is variable.
 
