--- a/03-RSS-HC3/HC3_1999_Q6.Rmd
+++ b/03-RSS-HC3/HC3_1999_Q6.Rmd
@@ -1,10 +1,25 @@
-
 ---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r}
+
+#library(xaringan)
+```
 
  
  
 6. A drug intended to reduce blood pressure was tested in the early stages of a clinical trial on 15 patients who had high blood pressure.  For each patient both the systolic blood pressure and the diastolic blood pressure were measured before they were given the drug.  They were then given the drug and both systolic and diastolic blood pressure were measured one hour later.  Systolic blood pressure is measured as the heart contracts to pump blood around the body.  Diastolic blood pressure is measured as the heart relaxes to allow blood to flow into it before the next contraction.  Systolic blood pressure is always higher than diastolic blood pressure and the two are positively correlated. 
  
+---
+
  The measured values and the differences between the values before and after taking the drug are given below. 
  
 Patient number 
@@ -46,6 +61,8 @@ p
 81:495=15
 = 18:93=2:33 = 8:12
 
+---
+
     * very strong evidence against the NH; hence very strong evidence in favor of the drug being
 effective.
 * A 95\% confidence interval for the true mean change is 18:93§t14;5% £2:33 or 18:93§2:145£
@@ -64,10 +81,11 @@ p
 = 9:27=2:22 = 4:17
 
 ---
-    * The 95\% confidence interval is 9:27 § 2:145 £ 2:22 = 9:27 § 4:76 which is 4.51 to 14.03
-    * Again there is very strong evidence of a real difference, ie that the drug is effective, but the
+
+* The 95\% confidence interval is 9:27 § 2:145 £ 2:22 = 9:27 § 4:76 which is 4.51 to 14.03
+* Again there is very strong evidence of a real difference, ie that the drug is effective, but the
 reduction in diastolic pressure is less than in systolic.
-    * Generally the two pressures decrease together in the same patient, and roughly speaking
+* Generally the two pressures decrease together in the same patient, and roughly speaking
 the diastolic reduction is about 2/3 as much as the systolic reduction: the slope of a fitted line
 would be about +2/3.
 
