--- a/03-RSS-HC3/HC3_2002_Q3.Rmd
+++ b/03-RSS-HC3/HC3_2002_Q3.Rmd
@@ -21,7 +21,11 @@ Higher Certificate, Paper III, 2002. Question 3
 The figures are given in units of £bn, and are expressed in 1995 prices. 
  
  
-Year 1989 1990 1991 1992 1993 1994 1995 1996 1997 1998 1999 t -5 -4 -3 -2 -1 0 1 2 3 4 5 y 655.2 659.5 649.8 650.3 665.4 694.6 714.0 732.2 757.9 777.9 794.4 
+Year 1989 1990 1991 1992 1993 1994 1995 1996 1997 1998 1999 
+t -5 -4 -3 -2 -1 0 1 2 3 4 5 
+y 655.2 659.5 649.8 650.3 665.4 694.6 714.0 732.2 757.9 777.9 794.4 
+
+
  Source:  United Kingdom National Accounts, 2000 edn, table 1.1. 
  Note:    Σy = 7751.2,    Σy2 = 5491108.76,    Σt = 0,    Σt2 = 110,    Σty = 1706.3. 
  
@@ -33,6 +37,9 @@ Year 1989 1990 1991 1992 1993 1994 1995 1996 1997 1998 1999 t -5 -4 -3 -2 -1 0 1
  Obtain least squares estimates of α
  and β , and calculate r2 (the coefficient of determination).  Also estimate $\sigma^2$, the variance of ε , and obtain estimates of the standard errors of the coefficients α and β . (6) 
  
+ 
+---
+
 (ii) What are "the usual properties" of the errors?  How realistic is the assumption that the errors have these properties?  (You are not expected to describe or conduct any tests.) (2) 
  (iii) Interpret the value of r2, and the values of your estimates of $\alpha$ and $\beta$ . (3) 
  
@@ -93,6 +100,7 @@ n S
 * Hence SE($\hat{\alpha}}$) = 5.24 and SE($\hat{\beta}}$ ) = 1.658.
 
 ---
+
 *  The { ε
 i} in the linear model are usually assumed to be independent, from the
 same Normal distribution, mean 0, variance σ 2. As y increases with t, it is possible
@@ -101,7 +109,11 @@ and also non-linearity of the model, independence may also be doubtful.
 *  The correlation coefficient r = 0.9067 = 0.952 . This shows a strong linear
 relation between y and time. Alternatively, r2 shows that 90.7\% of the variation in the
 annual GDP figures can be explained as a linear trend in time, with positive slope
-(βˆ =15.52 ). The slope is the average annual increase in GDP over the period, which
+(βˆ =15.52 ). 
+
+---
+
+* The slope is the average annual increase in GDP over the period, which
 is £15.52 bn (expressed at 1995 prices); this is over 2\% of the annual figure.
 αˆ = 704.65 was the figure estimated for t = 0 , i.e. 1994, on the basis of all the data
 (the actual figure allowing for the random variation was 694.6).
@@ -120,6 +132,9 @@ t = +3 ; yˆ = 704.6545 + (3×15.5118) = 751.19 .
 *  Note that because of the "flat" period in the first 4 years (or the drop back in
 1991, however this is interpreted), the linear relation is forced to have a somewhat
 smaller slope than seems necessary to explain 1991 – 1999 well.
+
+---
+
 For 2000, yˆ = 704.6545 + (6×15.5118) = 797.73. Because of the slope not reflecting
 the years' GDP in late 1990s, this estimate is probably low (but not unreasonable).
 For 2010, yˆ = 704.6545 + (16×15.5118) = 952.84, but this can only be a guess as the
