--- a/03-RSS-HC3/HC3_2002_Q5.Rmd
+++ b/03-RSS-HC3/HC3_2002_Q5.Rmd
@@ -16,6 +16,9 @@ output:
 
 
 5. Data were collected from the Financial Times of 11 October 2001 on the dividend yields of 36 Bank shares (Banks), 46 Electronic and Electrical Equipment company shares (E&EEq) and 88 Support Services company shares (SS).  (Support Services companies provide services such as catering and security to manufacturing and other companies.)  These observations were read into a computer using the Minitab package and arranged in ascending order as shown in the edited output on this page and the next. 
+
+---
+
  Note that the command DESCRIBE is used to obtain the mean, median, quartiles, etc, of the three sets of observations as shown, and the commands DOTPLOT and STEM-AND-LEAF generate appropriate diagrams. 
  (i) Draw boxplots of each of the three sets of observations, indicating any outliers.         (6) 
  
@@ -53,17 +56,28 @@ MTB > DotPlot 'Banks'-'SS'; SUBC>   Same.                    :                  
 *  Boxplots require median, quartiles, minimum and maximum values. As each
 set of data has been arranged in increasing order of size, it is easy to check whether
 any outliers have been included when making these calculations.
+
 For Banks, the listing shows no outliers. Since N = 36, the median M is between the
 18th and 19th observations, both of which are 3.0. Q1 is between the 9th and 10th,
 which are 2.4 and 2.5. The program calculates 2.425; 2.45 is also acceptable. Q3 is
 found in a similar way.
+
+---
+  
 For E&EEq there are three obvious outliers. N = 46, so M is between the 23rd and
-24th observations, at 3.25. Clearly the full set of data have been used in the program's
-calculation (not the N = 43 when outliers are omitted). Q1, Q3 are 0.3, 5.325, or near
+24th observations, at 3.25. 
+
+Clearly the full set of data have been used in the program calculation (not the N = 43 when outliers are omitted). 
+
+Q1, Q3 are 0.3, 5.325, or near
 to these depending on the method of calculation.
+
 The * points are outliers, and the upper whisker does not include them. [Since we use
 median and quartiles, not mean and standard deviation, the difference between values
 with and without outliers would not be great.]
+
+---
+
 For SS, there may be one outlier at 11.9 (although there is also considerable skewness
 at the upper end). M = 2.2, Q1 = 0.325, Q3 = 4.775.
 [Note. The plots drawn above might not appear exactly correct, due to screen and/or printer
@@ -78,6 +92,9 @@ x
 x
 0 3 6 9 12
 *
+
+---
+
 *  The column of numbers 001122… is the "stem", which is the number before
 the decimal point. To the right of this, listed in increasing order, are the "leaves",
 which are the decimal parts; those with decimal parts 0 – 4 are listed on one row, and
@@ -89,6 +106,9 @@ shows that the first four data in
 Frequencies are cumulated, row by row, from each end, so that they meet in the
 middle, where the bracketed number, e.g. (7) for Banks, shows the actual frequency in
 the interval containing the median.
+
+---
+
 The dotplots show where each observation is located on the scale of measurement,
 with one dot for each item. (On the scales used here, spacing forces some adjacent
 numbers to come together.)
@@ -96,14 +116,23 @@ numbers to come together.)
 reasonably symmetrical pattern with 3% as its approximate centre. The spread of this
 set of data is not great; there are no upper outliers and the range of the 32 items
 excluding the 4 low ones is from 2.1 to 5.1.
+
+---
+
 E&EEq: The DESCRIBE program results are rather distorted by the three very large
 observations, which are clearly outliers, and the general skewness of the whole
 pattern. There is a substantial number of zeros. An "exponential decay" pattern (an
 exponential distribution) might explain all but the last three.
+
+---
+
 SS: This is rather similar to E&EEq, having several zeros and an exponential pattern.
 However, this pattern gradually tails off and does not have outliers far above their
 neighbours – it is probably wise to treat 11.9 as an outlier, although it would fit an
 exponential distribution.
+
+---
+
 General: Stem and leaf diagrams seem to give the interpretation more easily than
 dotplots (at least with the program used) but the numerical descriptive summaries
 seem less satisfactory than either of these graphical methods. The question of a subgroup
