--- a/03-RSS-HC3/HC3_2004_Q6.Rmd
+++ b/03-RSS-HC3/HC3_2004_Q6.Rmd
@@ -31,14 +31,18 @@ Temperature 18 19 20 21 22 23 24 Volume 10.10 10.80 11.45 12.18 12.80 13.35 15.9
         Σt2 = 3115 Σv2 = 1092.9774 Σtv = 1842.03 
  
 Two linear regressions have been estimated, one using all seven pairs of measurements, and one omitting the last measurement listed (temperature = 24°C).  Edited results are shown below;  some quantities relating to the first regression have been omitted deliberately. 
- 
+
+
+---
+
 Regression Analysis: volume versus temperature – all measurements 
-\begin{verbatim}
+
 The regression equation is volume = ** + ** temperature 
  
 Predictor        Coef     SE Coef        T        P Constant          **      2.386      -2.31    0.069 temperature       **      0.1131      7.53    0.001 
  
 S = 0.5986      R-Sq = **%     
+
 ---
 
 Regression Analysis: volume versus temperature – omitting measurement at 240C 
@@ -48,10 +52,11 @@ The regression equation is volume = -1.68 + 0.657 temperature
 Predictor        Coef       SE Coef         T        P Constant        -1.6797     0.2803      -5.99    0.004 temperature      0.65657    0.01362     48.19    0.000 
  
 S = 0.05700     R-Sq = 99.8%      
+
 ---  
  
 (i) Plot the data and comment. 
-(4) 
+
  
 (ii) Calculate the missing estimated coefficients in the first regression, and find the coefficient of determination R2. (5) 
  
@@ -78,7 +83,11 @@ Without the last point, there is an almost linear relation (perhaps a very sligh
  
 ---
 
-(iii) The regression omitting the last point gives a much better fit to the remaining points.  This is reflected in the smaller residual mean square ((0.05700)2 instead of (0.5986)2) and hence the smaller standard errors of the coefficients, both of which give highly significant t statistics.  R2 is also greater for this regression.  If, however, the last point is considered to be genuine and important, it is obviously not taken into account at all by the regression omitting it.  The first regression does include it, but arguably a more complicated model than simple linear regression should be used anyway. 
+(iii) The regression omitting the last point gives a much better fit to the remaining points.  This is reflected in the smaller residual mean square ((0.05700)2 instead of (0.5986)2) and hence the smaller standard errors of the coefficients, both of which give highly significant t statistics.  R2 is also greater for this regression.  If, however, the last point is considered to be genuine and important, it is obviously not taken into account at all by the regression omitting it.  
+
+---
+
+The first regression does include it, but arguably a more complicated model than simple linear regression should be used anyway. 
  
 18 21 24 
 10
@@ -94,7 +103,7 @@ Temperature t (degrees Celsius)
 * The line, if projected back, would have v = –1.68 when t = 0 (this is of course absurd;  obviously the linear regression would not hold that far outside the range of the available data). 
 * $R^2$ is the proportion (usually given as a percentage, as in the edited results) of the total variation in the data that is explained by the regression relation. 
 
-    * "SE Coef" is the standard error of each regression coefficient.  "T" is the value of each coefficient divided by its standard error (i.e. it is the value of the t test statistic for testing the hypothesis that the true value of the coefficient is zero).  "P" is the probability of obtaining the calculated value of T or a more extreme value, on the null hypothesis that the true value of the coefficient is zero. 
+* "SE Coef" is the standard error of each regression coefficient.  "T" is the value of each coefficient divided by its standard error (i.e. it is the value of the t test statistic for testing the hypothesis that the true value of the coefficient is zero).  "P" is the probability of obtaining the calculated value of T or a more extreme value, on the null hypothesis that the true value of the coefficient is zero. 
  
 ---
 
