--- a/03-RSS-HC3/HC3_1997_Q2.Rmd
+++ b/03-RSS-HC3/HC3_1997_Q2.Rmd
@@ -19,13 +19,32 @@ output:
 Log surface temperature (x)
 Log light intensity (y)
 Log surface temperature (x)
-Log light intensity (y) 4.38 5.02 4.53 5.10 4.42 4.66 4.45 5.22 4.29 4.66 4.53 5.18 4.38 4.90 4.43 5.57 4.22 4.39 4.38 4.62 3.48 6.05 4.45 5.06 4.38 4.42 4.50 5.34 4.56 5.10 4.45 5.34 4.45 5.22 4.55 5.54 3.49 6.29 4.45 4.98 4.23 4.34 4.42 4.50 4.62 5.62
-4.54.03.5
-6.5
-5.5
-4.5
-Log surface temperature
-Log light intensity
+Log light intensity (y) 
+
+Log surfacetemperature(x) Log lightintensity(y)Log surfacetemperature(x)Log lightintensity(y)
+4.38 5.02 4.53 5.10 
+4.42 4.66 4.45 5.22 
+4.29 4.66 4.53 5.18 
+4.38 4.90 4.43 5.57 
+4.22 4.39 4.38 4.62 
+3.48 6.05 4.45 5.06
+4.38 4.42 4.50 5.34
+4.56 5.10 4.45 5.34 
+4.45 5.22 4.55 5.54 
+3.49 6.29 4.45 4.98 
+4.23 4.34 4.42 4.50
+4.62 5.62
+
+c(4.38, 4.42, 4.29, 4.38, 4.22, 3.48, 4.38, 4.56, 4.45, 3.49, 
+4.23, 4.62, 4.53, 4.45, 4.53, 4.43, 4.38, 4.45, 4.50, 4.45, 4.55, 
+4.45, 4.42)
+
+
+c(5.02, 4.66, 4.66, 4.9, 4.39, 6.05, 4.42, 5.10, 5.22, 6.29, 4.34, 
+5.62, 5.10, 5.22, 5.18, 5.57, 4.62, 5.06, 5.34, 5.34, 5.54, 4.98, 
+4.50)
+
+
 Scatter plot of stars in cluster CYG OB1
 (i) A regression analysis of the full data set was performed using a statistical package and produced the following output:
 The regression equation is   Log light intensity = 8.41 - 0.763 Log surface temperature
@@ -90,6 +109,9 @@ P
 P
 (x ¡ ¯x)2 =
 412:6855 ¡ 93:072=21 = 0:20812. ˆb = 3:038.
+
+---
+
 * A regression line has to go through the mean (¯x; ¯y) of all the data. If there
 are two (or more) parts to the population or set of data, as here, then it
 18
@@ -97,8 +119,7 @@ does not explain the data well.
 
     * The sub-populations have to be separated.
 * In this case there are only two points that are well away from the rest. All
-the remaining 21 have their x values (log surface temperature) between 4.2
-and 4.6 approximately.
+the remaining 21 have their x values (log surface temperature) between 4.2 and 4.6 approximately.
 * For temperatures in this range therefore we can use
 the regression line with slope +3:038 as a summary of the relationship. 
 * We
